2010-05-03  Gerrit Pape <pape@smarden.org>

	* Fix command -- crash.

2010-04-15  H. Peter Anvin <hpa@zytor.com>

	* Fix for job control off warning.

2010-04-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Use faccessat if available.

2010-04-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Make trap signal name/number errors non-fatal.
	* Release 0.5.6.

2010-04-02  maximilian attems <max@stro.at>

	* Use TMPDIR in mkbuiltins.

2010-03-10  Jilles Tjoelker <jilles@stack.nl>

	* Fix logical or result value.

2010-03-09  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix binary operator parsing.

2009-11-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix off-by-one recordregion in readcmd.

2009-09-28  Jim Meyering  <meyering@redhat.com>

	don't read-uninitialized for \177 in a here-doc
	A DEL (0177, dec 127) byte in a here-document would cause dash to
	access uninitialized memory at the end of one of the syntax.c tables,
	since those tables are sized to accommodate a maximum index of
	BASESYNTAX + 126.  Make the generated tables one byte larger.
	printf ':<<\\E\n\200y\nE'|./dash
	* src/mksyntax.c (filltable): Use 258, not 257 as the size,
	so that BASESYNTAX(=130) + 127 is a valid index.
	(print): Likewise.
	Don't emit explicit array dimension in declaration.

2009-08-31  Eric Blake <ebb9@byu.net>

	* Avoid compiler warnings on isdigit.

2009-08-31  Matthew Burgess <matthew@linuxfromscratch.org>

	* Add another missing LC_COLLATE to mkbuiltins.

2009-08-31  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix NUL termination in readcmd.
	* Lookup PWD after going through CDPATH.

2009-08-11  Herbert Xu <herbert@gondor.apana.org.au>

	* Pass EV_TESTED into evalcmd.
	* Revert SKIPEVAL into EXEXIT.

2009-08-11  Rocky Bernstein <rocky.bernstein@gmail.com>

	* Add preliminary LINENO support.

2009-08-11  Stefan Potyra <stefan.potyra@informatik.uni-erlangen.de>

	* Honor tab as IFS whitespace when splitting fields in readcmd.
